# SimpleSoftwareRenderer

./: .gitignore  CMakeLists.txt  LoadModel.cpp  LoadModel.h  MathUtils.cpp  MathUtils.h  README.md  Renderer.cpp  Renderer.h  Skybox.h  main.cpp
